syntax = "proto3";

// 文件选项
option java_package = "com.yum.oa.common.im.protocol";
option java_outer_classname = "MessageBase";

message Message {
  string requestId = 1;
  CommandType cmd = 2;
  string content = 3;
  enum CommandType {
    NORMAL = 0; // 常规业务消息
    HEARTBEAT_REQUEST = 1;  // 客户端心跳消息
    HEARTBEAT_RESPONSE = 2; // 服务端心跳消息
	  OPEN = 3;	//websocket连接成功
  }
}
